# edge-ml

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  camera  cmake_install.cmake  image_bb.py  requirements.txt  video_bb.py
.github/workflows/: clang-format.yml  cpplinter.yml
ci/: clang-format-checker.sh  clang-format.sh
client/: app.py  models.py  requirements.txt
client/static/css/: alert.css  styles.css
client/static/img/: saved_resource
client/templates/: Profile _ Tesla.html  dashboard.html  index.html  login.html  profile.html  register.html
client/templates/Profile _ Tesla_files/: ProfileSettings.e38acce2.chunk.css  addressForm.8f4f72fa.chunk.css  gtm.js  header_base.bundle.css  main.8de23f43.css  (+2 more)
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  simple_camera.cpp  simple_camera_old.cpp
src/calib/: 01_intrinsics_lens_dist.py  02_calibrate_create_rectification_map.py  capture-stereo.py
src/depth_pipeline_python/: .depth_vpi2.py.swp  .~lock.depth_vpi2.odt#  K_l.npy  K_r.npy  depth_vpi.py  depth_vpi2.py  dist_coeff_l.npy  dist_coeff_r.npy
src/message/: sms_message.py
src/model/: EdgeTraining.py  Siamese_Network.ipynb  Siamese_Network.py  Siamese_Predictor.py  app.py  data_loader.py  example.cpp  experiment.py  mobilenet.ipynb  new_model.py  requirements.txt  siamese_model.ipynb  siamese_model.py  utils.py
src/networking/: client.py  server.py
temp/: CMakeCache.txt
utils/: CMakeLists.txt  Makefile  bounding_boxes.cpp  cmake_install.cmake  image_bb.py  motion_detection.cpp  video_bb.py
(+22 files in other folders)
